<resources>
    <string name="app_name">RecyclerViewSamples</string>
    <string name="main_item_decoration_button_text">Item Decoration</string>
    <string name="item_decoration_divider_button_text">Divider</string>
    <string name="item_decoration_gap_button_text">Gap</string>
    <string name="main_grid_list_button_text">Grid List</string>
    <string name="grid_recycler_view_button_text">Recycler View</string>
    <string name="grid_increase_span_count_button_text">Increase Span Count</string>
    <string name="grid_reduce_span_count_button_text">Reduce Span Count</string>
    <string name="grid_grid_view_button_text">Grid View</string>
    <string name="main_staggered_grid_button_text">Staggered Grid</string>
    <string name="staggered_layout_staggered_grid_layout_manager_button_text">Staggered Grid LayoutManager</string>
    <string name="main_endless_load_button_text">Endless load</string>
    <string name="endless_load_recycler_endless_load">RecyclerView Endless Load</string>
    <string name="endless_load_nested_scroll_view_endless_load">NestedScrollView Endless Load</string>
    <string name="main_item_enter_animation_button_text">Item Enter Animation</string>
    <string name="main_action_mode_button_text">Action Mode</string>
    <string name="action_mode_recycler_view_action_mode_button_text">RecyclerView Action Mode</string>
    <string name="action_mode_list_view_action_mode_button_text">ListView Action Mode</string>
    <string name="menu_title_delete_all">Delete All</string>
    <string name="menu_title_select_all">Select All</string>
    <string name="main_item_gesture_button_text">Item Gesture</string>
    <string name="gesture_vertical_list_button_text">Vertical List Drag &amp; Swipe</string>
    <string name="gesture_grid_list_button_text">Grid List Drag</string>
    <string name="main_paging_button_text">Paging</string>
</resources>
