<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/button_main_item_decoration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_item_decoration_button_text"/>

        <Button
            android:id="@+id/button_main_grid_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_grid_list_button_text"/>

        <Button
            android:id="@+id/button_main_staggered_grid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_staggered_grid_button_text"/>

        <Button
            android:id="@+id/button_main_endless_load"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_endless_load_button_text"/>

        <Button
            android:id="@+id/button_main_item_enter_animation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_item_enter_animation_button_text"/>

        <Button
            android:id="@+id/button_main_action_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_action_mode_button_text"/>

        <Button
            android:id="@+id/button_main_item_gesture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_item_gesture_button_text"/>

        <Button
            android:id="@+id/button_main_paging"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_paging_button_text"/>

    </LinearLayout>

</ScrollView>